--- a/index.html
+++ b/index.html
@@ -822,14 +822,14 @@
                     </div>
                     <div class="project-content">
                         <h3>ImmunoCode Africa</h3>
-                        <p>Open-source TCR/BCR tools specifically designed for African researchers to study immune repertoires.</p>
+                        <p>Open-source tools and solutions specifically designed for African researchers to study the immune systems</p>
                         <div class="project-tags">
                             <span class="tag">Open Source</span>
                             <span class="tag">Python</span>
                             <span class="tag">Immunology</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Learn More</a>
+                            <a href="immunocodeAfrica.html"><i class="fas fa-external-link-alt"></i> Website</a>
                         </div>
                     </div>
                 </div>
