--- a/immunocodeAfrica.html
+++ b/immunocodeAfrica.html
@@ -6,6 +6,7 @@
     <title>Immunocode Africa | Digital Health Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="ChatGPT Image Apr 7, 2025, 12_34_53 PM.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -1002,16 +1003,20 @@
                 margin-top: 10px;
             }
         }
+        .header-container img{
+            min-height: 40px;
+            width: 40px;
+        }
+
     </style>
 </head>
 <body>
     <!-- Header -->
     <header id="header">
         <div class="container header-container">
-            <a href="#home" class="logo">
-                <div class="logo-img">IA</div>
-                <div class="logo-text">Immuno<span>code</span> Africa</div>
-            </a>
+            
+                <img src="ChatGPT Image Apr 7, 2025, 12_34_53 PM.png" >
+            
             <nav>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <i class="fas fa-bars"></i>
