--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jimmy X | Immunologist & Bioinformatician</title>
+    <link rel="icon" href="ChatGPT Image Apr 7, 2025, 12_34_53 PM.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -1054,7 +1055,7 @@
             <div class="footer-content">
                 <a href="#" class="footer-logo">Jimmy X.</a>
                 <div class="footer-links">
-                    <a href="#about">About</a>
+                    <a href="ams.html">AMS</a>
                     <a href="#projects">Projects</a>
                     <a href="#skills">Skills</a>
                     <a href="#resume">Resume</a>
