--- a/ams.html
+++ b/ams.html
@@ -25,31 +25,40 @@
         }
     </script>
     <style>
-        .gradient-bg {
-            background: linear-gradient(135deg, #800020 0%, #5C0011 100%);
-        }
         .program-item {
             transition: all 0.3s ease;
         }
         .program-item:hover {
             background-color: #F8F4E9;
         }
+        .header-bg {
+            background-color: #800020;
+        }
+        .footer-bg {
+            background-color: #5C0011;
+        }
+        .section-header {
+            background-color: #800020;
+        }
+        .date-card {
+            border: 2px solid #800020;
+        }
     </style>
 </head>
 <body class="bg-white font-sans text-gray-800 antialiased">
     <div class="min-h-screen flex flex-col">
         <!-- Header -->
-        <header class="gradient-bg text-white shadow-lg">
+        <header class="header-bg text-white shadow-lg">
             <div class="container mx-auto px-4 py-8">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="mb-6 md:mb-0">
                         <h1 class="text-3xl md:text-4xl font-display font-bold mb-2">AMS Career Day</h1>
                         <p class="text-xl md:text-2xl font-light">Exploring Careers in Health and Biomedical Sciences</p>
                     </div>
-                    <div class="bg-white text-maroon rounded-lg p-4 shadow-md text-center">
-                        <p class="text-sm font-semibold">Event Date</p>
-                        <p class="text-2xl font-bold">Tomorrow</p>
-                        <p class="text-sm">08:00 AM - 03:10 PM</p>
+                    <div class="bg-white date-card rounded-lg p-4 shadow-md text-center">
+                        <p class="text-sm font-semibold text-maroon">Event Date</p>
+                        <p class="text-2xl font-bold text-maroon">Today</p>
+                        <p class="text-sm text-maroon">08:00 AM - 03:10 PM</p>
                     </div>
                 </div>
             </div>
@@ -60,7 +69,7 @@
             <!-- Introduction Section -->
             <section class="mb-12">
                 <div class="bg-white rounded-lg shadow-md p-6 md:p-8">
-                    <h2 class="text-2xl md:text-3xl font-display font-bold text-primary mb-4">About the Event</h2>
+                    <h2 class="text-2xl md:text-3xl font-display font-bold text-maroon mb-4">About the Event</h2>
                     <div class="prose max-w-none">
                         <p class="text-lg mb-4">Join us for an inspiring day of exploration and networking at the AMS Career Day, focused on careers in Health and Biomedical Sciences. This event brings together students, researchers, and professionals to share insights, experiences, and opportunities in these dynamic fields.</p>
                         <p class="mb-4">The program features keynote speeches, panel discussions, poster presentations, and networking sessions with leading institutions and organizations in the health sector.</p>
@@ -72,7 +81,7 @@
             <!-- Program Section -->
             <section>
                 <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <div class="bg-primary text-white px-6 py-4">
+                    <div class="section-header text-white px-6 py-4">
                         <h2 class="text-2xl font-display font-bold">Event Program</h2>
                     </div>
                     
@@ -185,7 +194,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="gradient-bg text-white py-8">
+        <footer class="footer-bg text-white py-8">
             <div class="container mx-auto px-4">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="mb-4 md:mb-0">
@@ -198,7 +207,7 @@
                     </div>
                 </div>
                 <div class="mt-8 pt-6 border-t border-maroon-light text-center text-gray-300 text-sm">
-                    <p>© 2023 AMS Career Day. All rights reserved.</p>
+                    <p>© 2025 AMS Career Day. All rights reserved.</p>
                 </div>
             </div>
         </footer>
