--- a/ams.html
+++ b/ams.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMS Career Day - Health & Biomedical Sciences</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="gh.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
