--- a/tabs.html
+++ b/tabs.html
@@ -172,7 +172,7 @@
         .hero-image img {
             max-width: 100%;
             height: auto;
-            border-radius: 50%;
+            border-radius: 10%;
             border: 6px solid white; /* White border creates separation */
             box-shadow: 0 0 35px rgba(232, 138, 172, 0.3); /* Pink glow */
         }
@@ -715,7 +715,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Hi, I'm <span>Tabitha X. Mhango</span></h1> <!-- NAME UPDATED -->
+                    <h1>Hi, I'm <span>Tabitha X. Mhango</span></h1> 
                     <h2>Management Information Technology Student | Aspiring Software Developer</h2>
                     <p>Passionate about building efficient and beautiful software solutions, exploring new technologies, and solving complex problems through code.</p>
                     <div class="btn-group">
@@ -724,9 +724,8 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <!-- Replace with Tabitha's actual photo -->
-                    <img src="Tabs.jpg" alt="Tabitha X. Mhango - Headshot"> <!-- ALT TEXT UPDATED -->
-                </div>
+                   
+                    <img src="Tabs.jpg" alt="Tabitha X. Mhango - Headshot"> 
             </div>
         </div>
     </section>
@@ -746,7 +745,7 @@
                 <div class="about-text">
                     <h3>My Tech Journey</h3>
                     <p>As an IT student focusing on software development, I'm driven by the power of technology to create practical tools and enhance digital experiences. My coursework has provided a strong foundation in programming, algorithms, database management, and web development.</p>
-                    <p>I enjoy the entire development lifecycle, from conceptualizing and designing solutions to coding, testing, and deployment. I'm constantly learning new languages and frameworks, currently focusing on [mention a specific area like Python/Django, React, Cloud Services, etc.].</p>
+                    <p>I enjoy the entire development lifecycle, from conceptualizing and designing solutions to coding, testing, and deployment. I'm constantly learning new languages and frameworks, currently focusing on Python/Django, React, Cloud Services, etc.].</p>
                     <p>I believe in writing clean, maintainable code and collaborating effectively within a team environment. My goal is to leverage my skills to build innovative applications and contribute to impactful tech projects.</p>
                 </div>
             </div>
