--- a/index.html
+++ b/index.html
@@ -1891,7 +1891,7 @@
             </div>
 
         </div> <!-- Closing div for .container in #resume section -->
-    </section> <!-- This closing tag was already there -->
+    </section> 
 
 
     <!-- Contact Section -->
@@ -1912,12 +1912,12 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:jimmybanda21@gmail.com">jimmybanda21@gmail.com</a>
+                            <a href="mailto:jimmybanda21@gmail.com">jimmybanda@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                              <!-- IMPORTANT: Replace with your actual phone number or remove -->
-                            <a href="tel:+265xxxxxxxx">[Your Phone Number Here - Optional]</a>
+                            <a href="tel:+265">+265 998 401 750 </a>
                         </div>
                     </div>
                     <div class="social-links">
