--- a/index.html
+++ b/index.html
@@ -1912,7 +1912,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:jimmybanda21@gmail.com">jimmybanda@gmail.com</a>
+                            <a href="mailto:jimmybanda21@gmail.com">jimmyxbanda@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
