--- a/index.html
+++ b/index.html
@@ -1917,13 +1917,13 @@
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                              <!-- IMPORTANT: Replace with your actual phone number or remove -->
-                            <a href="tel:+265">+265 998 401 750 </a>
+                            <a href="tel:+265998401750">+265 998 401 750 </a>
                         </div>
                     </div>
                     <div class="social-links">
-                         <a href="https://github.com/JimmyBanda" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
-                         <a href="https://www.linkedin.com/in/jimmy-banda-70a9331aa/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-                         <a href="https://twitter.com/JimmyBa63809491" target="_blank" rel="noopener noreferrer" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
+                         <a href="https://github.com/Jimmytesla" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                         <a href="https://www.linkedin.com/in/jimmyxbanda" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+                         <a href="https://twitter.com/Jimmyxbanda" target="_blank" rel="noopener noreferrer" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
                          <!-- Add other relevant links e.g., ResearchGate, Orcid -->
                          <!-- <a href="#" target="_blank" rel="noopener noreferrer" aria-label="ResearchGate"><i class="fab fa-researchgate"></i></a> -->
                          <!-- <a href="#" target="_blank" rel="noopener noreferrer" aria-label="Orcid"><i class="ai ai-orcid"></i></a> --> <!-- Need academic icons library for Orcid -->
