--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,7 @@
                         </div>
                     </div>
                     <div class="social-links">
-                         <a href="https://github.com/Jimmytesla" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                         <a href="https://github.com/Jimmyxtesla" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
                          <a href="https://www.linkedin.com/in/jimmyxbanda" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
                          <a href="https://twitter.com/Jimmyxbanda" target="_blank" rel="noopener noreferrer" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
                          <!-- Add other relevant links e.g., ResearchGate, Orcid -->
