--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@
             <div class="about-content">
                 <div class="about-image animate-on-scroll slide-left">
                      <!-- Replace with a relevant image (lab, coding, etc.) -->
-                    <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Bioinformatics research concept" loading="lazy">
+                    <img src="hal-gatewood-OgvqXGL7XO4-unsplash.jpg" alt="Bioinformatics research concept" loading="lazy">
                 </div>
                 <div class="about-text animate-on-scroll slide-right">
                     <h3>The Convergence of Code & Cells</h3>
