--- a/index_.html.html
+++ b/index_.html.html
@@ -66,20 +66,21 @@
         </div>
 
         <!-- === PDF VIEWER === -->
-        <div class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-xl border border-gray-200 overflow-hidden">
-            <iframe 
-                src="MLW Innovation Week Programme_20250701_093548_0000.pdf" 
-                class="w-full" 
-                style="height: 85vh;"
-                frameborder="0"
-                <!-- IMPORTANT! Make sure the src path to your PDF is correct. -->
-            >
-                <div class="p-8 text-center text-gray-600">
-                     <p class="mb-4">It looks like your browser doesn't support embedding PDFs.</p>
-                     <p>No problem! You can <a href="MLW Innovation Week Programme_20250701_093548_0000.pdf" class="text-[#D80027] font-semibold hover:underline">download the PDF directly</a> to view the programme.</p>
-                </div>
-            </iframe>
-        </div>
+       <div class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-xl border border-gray-200 overflow-hidden">
+  <iframe 
+    src="MLW Innovation Week Programme_20250701_093548_0000.pdf" 
+    class="w-full"
+    style="height: 85vh;"
+    frameborder="0">
+  </iframe>
+  <div class="p-4 text-center text-gray-600">
+    <p class="mb-2">If the PDF doesn't load,</p>
+    <a href="MLW Innovation Week Programme_20250701_093548_0000.pdf" class="text-[#D80027] font-semibold hover:underline">
+      Download the Programme
+    </a>
+  </div>
+</div>
+
     </main>
 
     <!-- === FOOTER === -->
